--- a/settings.py.sample
+++ b/settings.py.sample
@@ -4,6 +4,7 @@ KEY = 'U4DMV*8nvpm3EOpvf69Rxw(('
 ACCESS_TOKEN = '***** PUT YOUR TOKEN HERE *****'
 
 # General Settings
+MODE = 'auto'
 REFRESH_TIME = 5 * 60
 # Need for QUESTIONS_API
 TAG_LIST = []
